--- a/app/templates/tab5.html
+++ b/app/templates/tab5.html
@@ -30,8 +30,8 @@
   </div>
   <div class="col-12 col-md-2">
     <input type="hidden" name="date_last_scanned" id="date_last_scanned">
-    <button type="submit" formaction="/tab5/save_hand_counted" class="btn btn-primary" onclick="return confirmSave()">Save</button>
-    <button type="submit" formaction="/tab5/update_hand_counted" class="btn btn-success" onclick="return confirmUpdate()">Update</button>
+    <button type="submit" formaction="/tab5/save_hand_counted" class="btn btn-primary" onclick="return confirmSave()">ADD NEW ITEMS</button>
+    <button type="submit" formaction="/tab5/update_hand_counted" class="btn btn-success" onclick="return confirmUpdate()">RETURN ITEMS</button>
   </div>
 </form>
 
